# company-spec

./: .gitignore  FRAMEWORK.md  MISSION.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.context/scripts/bash/: check-prerequisites.sh  common.sh  create-new-outcome.sh  setup-strategy.sh
.context/templates/: constitution-template.md  outcome-template.md  strategy-template.md  tasks-template.md
.context/templates/commands/: analyze.md  capture.md  clarify.md  constitution.md  outcome.md  strategy.md  tasks.md
src/context_cli/: __init__.py
