[project]
name = "company-spec"
version = "0.1.0"
description = "Company Spec - Structured organizational knowledge capture for AI deployment. Built on GitHub's Spec Kit methodology."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "T-0", email = "hello@t-0.dev" }
]
keywords = ["ai", "knowledge-management", "context", "specification", "cli", "spec-kit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
]

[project.scripts]
companyspec = "context_cli:main"

[project.urls]
Homepage = "https://github.com/T-0-co/company-spec"
Repository = "https://github.com/T-0-co/company-spec"
Documentation = "https://github.com/T-0-co/company-spec#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/.context/templates",
    "/.context/scripts",
]

[tool.hatch.build.targets.wheel.shared-data]
".context/templates" = "share/company-spec/templates"
".context/scripts" = "share/company-spec/scripts"
